--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.21.7",
     "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^3.8.1",
     "react-dom": "^18.2.0",
     "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
